--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-intl": "^3.11.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.4",
     "react-i18next": "^14.1.1",
     "react-scroll": "^1.9.0"
   },
